--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
+        android:id="@+id/txt_test"
         android:background="@color/red"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
