--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -11,10 +11,11 @@
     <TextView
         android:id="@+id/txt_title"
         android:text="Olá, mundo!"
+        android:textStyle="bold"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="18dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
@@ -22,6 +23,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_category"
         tools:itemCount="25"
+        android:paddingStart="10dp"
+        android:clipToPadding="false"
         android:background="@color/black"
         android:layout_width="match_parent"
         android:layout_height="150dp"
