--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:background="@color/red"
         android:scaleType="centerCrop"
-        android:src="@drawable/movie_4"
+        android:src="@drawable/placeholder_bg"
         app:layout_constraintDimensionRatio="3:4"
         android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
