--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -11,6 +11,7 @@
     
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/movie_toolbar"
+        app:titleTextColor="@color/white"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
