--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -9,12 +9,24 @@
     android:background="@color/black"
     >
     
+    <ImageView
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintDimensionRatio="16:9"
+        android:scaleType="centerCrop"
+        android:src="@drawable/shadows"
+        android:id="@+id/movie_img"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+
+        />
+    
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/movie_toolbar"
         app:titleTextColor="@color/white"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black"/>
+        android:background="@android:color/transparent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
