--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -4,58 +4,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="@color/black"
+    android:fillViewport="true">
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MovieActivity"
-        android:backgroundTint="@color/black"
-        android:layout_marginTop="20dp"
-        >
-
-        <ImageView
-            android:id="@+id/movie_img"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/shadows"
-            app:layout_constraintDimensionRatio="16:9"
-            app:layout_constraintTop_toTopOf="parent"
-
-            />
+        android:layout_height="wrap_content"
+        android:background="@color/black"
+        android:orientation="vertical"
+        android:paddingTop="20dp"
+        android:paddingBottom="32dp">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/movie_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:titleTextColor="@color/white" />
+            android:titleTextColor="@color/white" />
 
 
-        <ImageView
-            android:layout_width="72dp"
-            android:layout_height="72dp"
-            android:src="@drawable/ic_play"
-            app:layout_constraintBottom_toBottomOf="@+id/movie_img"
-            app:layout_constraintEnd_toEndOf="@+id/movie_img"
-            app:layout_constraintStart_toStartOf="@+id/movie_img"
-            app:layout_constraintTop_toTopOf="@+id/movie_img" />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/movie_img"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/shadows" />
+
+            <ImageView
+                android:id="@+id/btn_play"
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_play" />
+        </FrameLayout>
 
         <TextView
             android:id="@+id/movie_txt_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginBottom="22dp"
+            android:layout_marginTop="8dp"
             android:text="Olá, mundo!"
             android:textColor="@color/white"
             android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/movie_img"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/movie_txt_desc"
@@ -67,10 +64,9 @@
             android:ellipsize="end"
             android:lineSpacingExtra="3sp"
             android:maxLines="3"
-            android:text="Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo"
+            android:text="Descrição longa aqui..."
             android:textColor="@color/gray_light"
-            android:textSize="14sp"
-            app:layout_constraintTop_toBottomOf="@+id/movie_img" />
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/movie_txt_cast"
@@ -82,10 +78,9 @@
             android:ellipsize="end"
             android:lineSpacingExtra="3sp"
             android:maxLines="3"
-            android:text="Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo Olá, mundo"
+            android:text="Elenco e mais texto aqui..."
             android:textColor="@android:color/darker_gray"
-            android:textSize="14sp"
-            app:layout_constraintTop_toBottomOf="@+id/movie_txt_desc" />
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/txt_fixed"
@@ -97,30 +92,22 @@
             android:textAllCaps="true"
             android:textColor="@color/white"
             android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/movie_txt_cast" />
+            android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/movie_rv_similar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/txt_fixed"
+            android:nestedScrollingEnabled="false"
             tools:listitem="@layout/movie_item_similar" />
 
         <ProgressBar
             android:id="@+id/movie_progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/movie_rv_similar"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp" />
 
-            />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+    </LinearLayout>
 </androidx.core.widget.NestedScrollView>
